added list of tags based on WCK taxonomy kit

--- a/wp-content/themes/bizzbuzztheme/buzz/css/style.css
+++ b/wp-content/themes/bizzbuzztheme/buzz/css/style.css
@@ -4,6 +4,20 @@ html{
 position:relative
 }
 
+.tag-list span a {
+  background-color: #777;
+  display: inline;
+  padding: .2em .6em .3em;
+  font-size: 75%;
+  font-weight: bold;
+  line-height: 1;
+  color: #ffffff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
+}
+
 body {
 height: 100%;
         padding-top: 100px;
