added google analytics and google search

--- a/wp-content/themes/bizzbuzztheme/buzz/css/style.css
+++ b/wp-content/themes/bizzbuzztheme/buzz/css/style.css
@@ -599,3 +599,10 @@ overflow: initial;
     font-weight: normal;
     color: orange;
   }
+
+
+
+/* google search */
+.gsc-input-box {
+  height: 30px;
+}
